# file_reader

./: Cargo.toml  README.md
input/: description.txt  people.csv
src/: csv_reader.rs  event_watcher.rs  main.rs  postgres.rs  txt_reader.rs
