[package]
name = "file_reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2.2"
dotenv = "0.15.0"
openssl = "0.10.56"
postgres = "0.19.5"
postgres-openssl = "0.5.0"
serde = { version = "1.0.183", features = ["derive"] }
